add start/end timestamps
